--- a/source/sass/blocks/common/page.scss
+++ b/source/sass/blocks/common/page.scss
@@ -1,5 +1,6 @@
 .page {
   height: 100vh;
+  margin: 0 auto;
   font-size: 18px;
   font-family: "Oswald", sans-serif;
   line-height: 27px;
@@ -9,8 +10,8 @@
 .page__body {
   font-family: "Oswald", sans-serif;
   min-height: 100vh;
-  min-width: 320px;
-  margin: 0;
+  width: 320px;
+  margin: 0 auto;
   color: #000000;
 }
 
@@ -18,4 +19,16 @@
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+@media (min-width: $tablet-width) {
+  .page__body {
+    width: 768px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page__body {
+    width: 1440px;
+  }
 }
