--- a/source/sass/blocks/common/page-header.scss
+++ b/source/sass/blocks/common/page-header.scss
@@ -1,6 +1,7 @@
 .page-header {
   background-color: $base-white;
   position: relative;
+  padding: 14px 20px;
 }
 
 @media (min-width: $tablet-width) {
@@ -9,6 +10,7 @@
     justify-content: space-between;
     padding: 25px 30px;
     align-items: center;
+    column-gap: 52px;
   }
 }
 
