--- a/source/sass/blocks/common/social.scss
+++ b/source/sass/blocks/common/social.scss
@@ -6,6 +6,7 @@
   grid-template-columns: repeat(3, 28px);
   justify-content: center;
   gap: 24px;
+  border-top: 1px solid $light-special-gray;
   border-bottom: 1px solid $light-special-gray;
 }
 
