правки после проверки зд.4

--- a/source/sass/blocks/catalog/catalog.scss
+++ b/source/sass/blocks/catalog/catalog.scss
@@ -47,6 +47,10 @@
 }
 
 @media (min-width: $tablet-width) {
+  .catalog {
+    border: none;
+  }
+
   .catalog__list {
     display: grid;
     gap: 60px;
