--- a/source/sass/blocks/common/btn-burger.scss
+++ b/source/sass/blocks/common/btn-burger.scss
@@ -1,9 +1,8 @@
 .btn-burger {
-  width: 24px;
-  height: 24px;
   position: absolute;
-  top: 22px;
-  right: 19px;
+  top: 15px;
+  right: 12px;
+  padding: 20px;
   z-index: 4;
   background-color: transparent;
   border: none;
@@ -13,8 +12,8 @@
   content: "";
   position: absolute;
   display: block;
-  top: 2px;
-  left: -1px;
+  top: 10px;
+  left: 8px;
   width: 24px;
   height: 2px;
   background-color: #000000;
@@ -28,8 +27,8 @@
   &::after {
     content: "";
     position: absolute;
-    top: 10px;
-    right: -1px;
+    top: 19px;
+    right: 7px;
     width: 24px;
     height: 2px;
     background-color: #000000;
