--- a/source/sass/blocks/common/logo.scss
+++ b/source/sass/blocks/common/logo.scss
@@ -1,26 +1,21 @@
 .logo {
   text-decoration: none;
-  padding: 14px 20px;
-  display: flex;
-  min-height: 38px;
-  justify-content: center;
   box-sizing: content-box;
-}
-
-.logo__image {
-  position: absolute;
-  left: 20px;
-  top: 15px;
 }
 
 .logo__image-title {
   display: block;
+  position: absolute;
+  left: 110px;
+  bottom: 28px;
 }
 
 .footer__logo {
   padding-top: 40px;
   padding-bottom: 20px;
-  border-bottom: 1px solid $light-special-gray;
+  border-bottom: 1px solid #d9d9d9;
+  display: block;
+  text-align: center;
 }
 
 @media (min-width: $tablet-width) {
@@ -34,15 +29,29 @@
     position: static;
   }
 
+  .logo__image-title {
+    left: 101px;
+    bottom: 52px;
+  }
+
   .footer__logo {
     padding: 0;
     margin-bottom: 0;
     border: none;
+    display: flex;
+    justify-content: center;
+    align-content: stretch;
+    align-items: center;
   }
 }
 
 @media (min-width: $desktop-width) {
   .logo {
     height: 59px;
+  }
+
+  .logo__image-title {
+    left: 170px;
+    bottom: 88px;
   }
 }
