--- a/source/sass/blocks/common/main-nav.scss
+++ b/source/sass/blocks/common/main-nav.scss
@@ -36,6 +36,8 @@
 
 .main-nav--is-open .main-nav__wrapper {
   position: absolute;
+  top: 72px;
+  left: 0;
   z-index: 1;
   min-width: 100%;
   background-color: $base-white;
