--- a/source/sass/blocks/form/form.scss
+++ b/source/sass/blocks/form/form.scss
@@ -187,6 +187,7 @@
   .form {
     padding-left: 70px;
     padding-right: 70px;
+    border: none;
   }
 
   .form__title {
@@ -295,6 +296,10 @@
     justify-content: space-between;
     column-gap: 80px;
     margin-bottom: 70px;
+  }
+
+  .form__module {
+    width: 570px;
   }
 
   .form__module--info,
