--- a/source/sass/blocks/index/slider.scss
+++ b/source/sass/blocks/index/slider.scss
@@ -1,3 +1,8 @@
+.slider__before {
+  max-width: 100%;
+  height: auto;
+}
+
 @media (min-width: $desktop-width) {
   .slider {
     grid-area: slider;
