--- a/source/sass/blocks/form/form.scss
+++ b/source/sass/blocks/form/form.scss
@@ -59,14 +59,14 @@
   margin-bottom: 45px;
 }
 
-.module-contacts {
+.form__module--contacts {
   border: none;
   margin: 0;
   padding: 0;
   margin-bottom: 45px;
 }
 
-.module-comment {
+.form__module--comment {
   border: none;
   margin: 0;
   padding: 0;
@@ -165,7 +165,7 @@
   margin-bottom: 38px;
 }
 
-.module-extra {
+.form__module--extra {
   border: none;
   margin: 0;
   padding: 0;
@@ -212,7 +212,7 @@
     border: 1px solid $very-light-gray;
   }
 
-  .module-contacts {
+  .form__module--contacts {
     margin-bottom: 65px;
   }
 
@@ -290,47 +290,36 @@
 }
 
 @media (min-width: $desktop-width) {
-  .form__flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  .form {
+    display: grid;
     column-gap: 80px;
-    margin-bottom: 70px;
+    grid-template-columns: repeat(2, 1fr);
   }
 
-  .form__module {
-    width: 570px;
+  .form__title,
+  .form__text,
+  .form__module--contacts,
+  .form__module--comment,
+  .form__module--extra {
+    grid-column: 1 / 3;
   }
 
-  .form__module--info,
-  .form__module--diet {
-    flex-grow: 1;
-    margin: 0;
+  .form__module--contacts .form__module-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 80px;
   }
 
   .form__module--diet {
     box-shadow: 0 0 0 1px $very-light-gray;
   }
 
-  .form__module-list--contacts {
-    display: flex;
-  }
-
-  .form__module-item--grow {
-    flex-grow: 1;
-    margin-bottom: 0;
-  }
-
-  .module-contacts {
-    margin-bottom: 0;
-  }
-
-  .legend-comment {
-    margin-bottom: 78px;
-  }
-
   .module-list--extra {
-    display: flex;
-    justify-content: space-between;
+    grid-template-columns: repeat(4, 1fr);
+    margin-bottom: 52px;
+  }
+
+  .form__submit-note {
+    text-align: left;
   }
 }
