--- a/source/sass/blocks/index/sample.scss
+++ b/source/sass/blocks/index/sample.scss
@@ -22,15 +22,11 @@
 .sample__description {
   @include common-text;
   background-color: $sample-gray;
-  font-weight: 400;
   font-size: 12px;
   line-height: 12px;
   width: 77px;
   height: 24px;
   text-align: center;
-  position: absolute;
-  top: 44px;
-  left: 24px;
   text-transform: lowercase;
 }
 
@@ -52,12 +48,12 @@
   text-align: center;
   font-size: 24px;
   line-height: 24px;
+  grid-row-start: 1;
 }
 
 .sample__list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .sample__item {
@@ -65,7 +61,9 @@
   border-radius: 3px;
   width: 122px;
   height: 56px;
-  position: relative;
+  display: grid;
+  gap: 8px;
+  justify-content: center;
 }
 
 @media (min-width: $tablet-width) {
@@ -108,10 +106,9 @@
   }
 
   .sample__item {
-    border: 1px solid $special-gray;
-    border-radius: 3px;
     width: 162px;
     height: 77px;
+    gap: 16px;
   }
 
   .sample__value {
