--- a/3/css/style.css
+++ b/3/css/style.css
@@ -37,14 +37,10 @@
   overflow: hidden;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-}
-
 .page-header {
   background-color: #ffffff;
   position: relative;
+  padding: 14px 20px;
 }
 
 @media (min-width: 768px) {
@@ -53,6 +49,7 @@ img {
     justify-content: space-between;
     padding: 25px 30px;
     align-items: center;
+    column-gap: 52px;
   }
 }
 @media (min-width: 1440px) {
@@ -104,6 +101,8 @@ img {
 
 .main-nav--is-open .main-nav__wrapper {
   position: absolute;
+  top: 72px;
+  left: 0;
   z-index: 1;
   min-width: 100%;
   background-color: #ffffff;
@@ -200,6 +199,7 @@ img {
 }
 .page {
   height: 100vh;
+  margin: 0 auto;
   font-size: 18px;
   font-family: "Oswald", sans-serif;
   line-height: 27px;
@@ -209,8 +209,8 @@ img {
 .page__body {
   font-family: "Oswald", sans-serif;
   min-height: 100vh;
-  min-width: 320px;
-  margin: 0;
+  width: 320px;
+  margin: 0 auto;
   color: #000000;
 }
 
@@ -220,55 +220,77 @@ img {
   box-sizing: border-box;
 }
 
+@media (min-width: 768px) {
+  .page__body {
+    width: 768px;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1440px) {
+  .page__body {
+    width: 1440px;
+    margin: 0 auto;
+  }
+}
 .main {
   min-width: 320px;
 }
 
 .logo {
   text-decoration: none;
-  padding: 14px 20px;
-  display: flex;
   min-height: 38px;
-  justify-content: center;
   box-sizing: content-box;
-}
-
-.logo__image {
-  position: absolute;
-  left: 20px;
-  top: 15px;
+  position: relative;
 }
 
 .logo__image-title {
   display: block;
+  position: absolute;
+  left: 90px;
+  bottom: 14px;
 }
 
 .footer__logo {
+  display: block;
   padding-top: 40px;
   padding-bottom: 20px;
-  border-bottom: 1px solid #d9d9d9;
+  text-align: center;
 }
 
 @media (min-width: 768px) {
   .logo {
     height: 50px;
-    min-width: 174px;
     column-gap: 14px;
+    width: 174px;
   }
 
   .logo__image {
     position: static;
   }
 
+  .logo__image-title {
+    left: 72px;
+    bottom: 16px;
+  }
+
   .footer__logo {
     padding: 0;
-    margin-bottom: 0;
+    margin: 0;
     border: none;
+    display: flex;
+    justify-content: center;
+    align-content: stretch;
+    align-items: center;
   }
 }
 @media (min-width: 1440px) {
   .logo {
     height: 59px;
+  }
+
+  .logo__image-title {
+    left: 74px;
+    bottom: 24px;
   }
 }
 .footer {
@@ -385,6 +407,7 @@ img {
   grid-template-columns: repeat(3, 28px);
   justify-content: center;
   gap: 24px;
+  border-top: 1px solid #d9d9d9;
   border-bottom: 1px solid #d9d9d9;
 }
 
@@ -424,11 +447,10 @@ img {
   }
 }
 .btn-burger {
-  width: 24px;
-  height: 24px;
+  padding: 20px;
   position: absolute;
-  top: 22px;
-  right: 19px;
+  top: 14px;
+  right: 12px;
   z-index: 4;
   background-color: transparent;
   border: none;
@@ -438,8 +460,8 @@ img {
   content: "";
   position: absolute;
   display: block;
-  top: 2px;
-  left: -1px;
+  top: 10px;
+  left: 8px;
   width: 24px;
   height: 2px;
   background-color: #000000;
@@ -452,8 +474,8 @@ img {
 .main-nav--is-open .btn-burger::before, .main-nav--is-open .btn-burger::after {
   content: "";
   position: absolute;
-  top: 10px;
-  right: -1px;
+  top: 19px;
+  right: 7px;
   width: 24px;
   height: 2px;
   background-color: #000000;
@@ -783,16 +805,13 @@ img {
   font-size: 14px;
   line-height: 18px;
   background-color: #eaeaea;
-  font-weight: 400;
   font-size: 12px;
   line-height: 12px;
   width: 77px;
   height: 24px;
   text-align: center;
-  position: absolute;
-  top: 44px;
-  left: 24px;
   text-transform: lowercase;
+  overflow: hidden;
 }
 
 .sample__price-text {
@@ -813,11 +832,12 @@ img {
   text-align: center;
   font-size: 24px;
   line-height: 24px;
+  grid-row-start: 1;
 }
 
 .sample__list {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .sample__item {
@@ -825,7 +845,9 @@ img {
   border-radius: 3px;
   width: 122px;
   height: 56px;
-  position: relative;
+  display: grid;
+  gap: 8px;
+  justify-content: center;
 }
 
 @media (min-width: 768px) {
@@ -871,10 +893,9 @@ img {
   }
 
   .sample__item {
-    border: 1px solid #cdcdcd;
-    border-radius: 3px;
     width: 162px;
     height: 77px;
+    gap: 16px;
   }
 
   .sample__value {
@@ -1169,6 +1190,10 @@ img {
 }
 
 @media (min-width: 768px) {
+  .catalog {
+    border: none;
+  }
+
   .catalog__list {
     display: grid;
     gap: 60px;
@@ -1325,6 +1350,11 @@ img {
     line-height: 16px;
   }
 }
+.slider__before {
+  max-width: 100%;
+  height: auto;
+}
+
 @media (min-width: 1440px) {
   .slider {
     grid-area: slider;
@@ -1398,14 +1428,14 @@ img {
   margin-bottom: 45px;
 }
 
-.module-contacts {
+.form__module--contacts {
   border: none;
   margin: 0;
   padding: 0;
   margin-bottom: 45px;
 }
 
-.module-comment {
+.form__module--comment {
   border: none;
   margin: 0;
   padding: 0;
@@ -1521,7 +1551,7 @@ img {
   margin-bottom: 38px;
 }
 
-.module-extra {
+.form__module--extra {
   border: none;
   margin: 0;
   padding: 0;
@@ -1543,6 +1573,7 @@ img {
   .form {
     padding-left: 70px;
     padding-right: 70px;
+    border: none;
   }
 
   .form__title {
@@ -1573,7 +1604,7 @@ img {
     border: 1px solid #e7e7e7;
   }
 
-  .module-contacts {
+  .form__module--contacts {
     margin-bottom: 65px;
   }
 
@@ -1674,44 +1705,37 @@ img {
   }
 }
 @media (min-width: 1440px) {
-  .form__flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  .form {
+    display: grid;
     column-gap: 80px;
-    margin-bottom: 70px;
+    grid-template-columns: repeat(2, 1fr);
   }
 
-  .form__module--info,
-.form__module--diet {
-    flex-grow: 1;
-    margin: 0;
+  .form__title,
+.form__text,
+.form__module--contacts,
+.form__module--comment,
+.form__module--extra {
+    grid-column: 1/3;
+  }
+
+  .form__module--contacts .form__module-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 80px;
   }
 
   .form__module--diet {
     box-shadow: 0 0 0 1px #e7e7e7;
   }
 
-  .form__module-list--contacts {
-    display: flex;
-  }
-
-  .form__module-item--grow {
-    flex-grow: 1;
-    margin-bottom: 0;
-  }
-
-  .module-contacts {
-    margin-bottom: 0;
-  }
-
-  .legend-comment {
-    margin-bottom: 78px;
-  }
-
   .module-list--extra {
-    display: flex;
-    justify-content: space-between;
+    grid-template-columns: repeat(4, 1fr);
+    margin-bottom: 52px;
+  }
+
+  .form__submit-note {
+    text-align: left;
   }
 }
 /*# sourceMappingURL=style.css.map */
