--- a/source/sass/blocks/catalog/catalog.scss
+++ b/source/sass/blocks/catalog/catalog.scss
@@ -71,6 +71,10 @@
     padding-right: 30px;
   }
 
+  .catalog__item {
+    justify-content: space-between;
+  }
+
   .catalog__title--other {
     @include common-title;
     margin-bottom: 80px;
@@ -88,13 +92,18 @@
 }
 
 @media (min-width: $desktop-width) {
+  .catalog {
+    width: 1220px;
+    padding: 0;
+    margin: 0 auto;
+  }
+
+
   .catalog__list {
     display: grid;
     gap: 60px;
-    padding: 0 30px 30px 30px;
     grid-template-columns: repeat(3, 1fr);
-    padding-left: 110px;
-    padding-right: 110px;
+    padding: 0;
     column-gap: 80px;
     margin-bottom: 76px;
   }
@@ -110,9 +119,9 @@
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
     grid-template-areas: "title-other title-other" "catalog-list other-action";
-    padding-top: 0;
-    padding-left: 110px;
-    padding-right: 110px;
+    width: 1220px;
+    padding: 0;
+    margin: 0 auto;
     margin-bottom: 87px;
   }
 
