--- a/source/sass/blocks/common/page-header.scss
+++ b/source/sass/blocks/common/page-header.scss
@@ -19,6 +19,8 @@
     position: relative;
     z-index: 1;
     background-color: transparent;
-    padding: 55px 110px;
+    width: 1220px;
+    padding: 45px 0 75px 0;
+    margin: 0 auto;
   }
 }
