--- a/source/sass/blocks/index/sample.scss
+++ b/source/sass/blocks/index/sample.scss
@@ -134,14 +134,18 @@
 
 @media (min-width: $desktop-width) {
   .sample {
+    padding: 0;
+    background-image: linear-gradient($base-white 25%, $sample-gray 25%);
+  }
+
+  .sample__container {
     display: grid;
+    width: 1220px;
+    margin: 0 auto;
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "title slider" "paragraph slider" "statistics slider";
     grid-template-rows: auto 210px 210px;
-    padding-top: 0;
-    padding-left: 110px;
-    padding-right: 110px;
-    background-image: linear-gradient($base-white 25%, $sample-gray 25%);
+    padding: 0;
   }
 
   .sample__title {
