Добавляет sass файл контейнера

--- a/source/sass/blocks/index/promo.scss
+++ b/source/sass/blocks/index/promo.scss
@@ -1,7 +1,7 @@
 .promo {
-  background-size: 100%;
-  background-image: linear-gradient(to top, #ffffff 200px, hwb(97 22% 28% / 0.85) 200px), url("../../../img/index-background-mobile.png");
-  background-repeat: no-repeat;
+  //background-size: 100%;
+  //background-image: linear-gradient(to top, #ffffff 200px, hwb(97 22% 28% / 0.85) 200px), url("../../../img/index-background-mobile.png");
+  //background-repeat: no-repeat;
   padding-left: 20px;
   padding-right: 20px;
   text-align: center;
