--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,6 +27,7 @@
 @import "./blocks/catalog/other-action.scss";
 @import "./blocks/common/field-submit";
 @import "./blocks/index/slider.scss";
+@import "./blocks/common/container.sass";
 
 //Блоки формы подбора программы
 @import "./blocks/form/form.scss"
