Центровака блоков главной страцины мобильная версия

--- a/source/sass/blocks/common/dev.scss
+++ b/source/sass/blocks/common/dev.scss
@@ -1,22 +1,8 @@
-.dev {
-  @include link-reset;
-  color: $dark-gray;
-  display: flex;
-  justify-content: space-between;
-}
 
-.dev__img {
-  width: 27px;
-  height: 34px;
-}
 
-.dev__name {
-  margin: 0;
-}
-
-@media (min-width: $tablet-width) {
-  .dev {
-    width: 168px;
-    align-items: center;
-  }
-}
+// @media (min-width: $tablet-width) {
+//   .dev {
+//     width: 168px;
+//     align-items: center;
+//   }
+// }
