--- a/source/sass/blocks/index/promo.scss
+++ b/source/sass/blocks/index/promo.scss
@@ -1,10 +1,8 @@
 .promo {
-  //background-size: 100%;
-  //background-image: linear-gradient(to top, #ffffff 200px, hwb(97 22% 28% / 0.85) 200px), url("../../../img/index-background-mobile.png");
-  //background-repeat: no-repeat;
-  padding-left: 20px;
-  padding-right: 20px;
-  text-align: center;
+  background-image: linear-gradient(to top, #ffffff 240px, rgba(104, 183, 56, 0.85) 200px), url("../../../img/index-background-mobile.png");
+  background-repeat: no-repeat;
+  background-position: top center;
+  min-width: max-content;
 }
 
 .promo__title {
