--- a/source/sass/blocks/index/sample.scss
+++ b/source/sass/blocks/index/sample.scss
@@ -1,8 +1,7 @@
 .sample {
   background-color: $sample-gray;
-  padding-left: 20px;
-  padding-right: 20px;
   padding-top: 25px;
+  min-width: max-content;
 }
 
 .sample__title {
