--- a/source/sass/blocks/common/btn-burger.scss
+++ b/source/sass/blocks/common/btn-burger.scss
@@ -1,8 +1,8 @@
 .btn-burger {
   padding: 20px;
   position: absolute;
-  top: 14px;
-  right: 12px;
+  bottom: 4px;
+  right: 3px;
   z-index: 4;
   background-color: transparent;
   border: none;
