--- a/source/sass/blocks/common/footer.scss
+++ b/source/sass/blocks/common/footer.scss
@@ -1,11 +1,20 @@
 .footer {
   background-color: $basic-grey;
+  min-width: max-content;
+}
+
+.footer__addres {
+  background-color: $base-white;
 }
 
 .footer__address-container {
   background-color: $base-white;
   display: flex;
+  justify-content: space-between;
   padding: 26px 20px;
+  min-width: max-content;
+  width: 320px;
+  margin: 0 auto;
 }
 
 .footer__address-container--bg {
@@ -30,10 +39,25 @@
   margin: 0;
 }
 
-.footer__link-container {
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 40px;
+.dev__container {
+  margin-bottom: 40px;
+}
+
+.footer__dev-link {
+  @include link-reset;
+  color: $dark-gray;
+  display: flex;
+  padding: 20px 0 40px 0;
+  justify-content: space-between;
+}
+
+.footer__dev-img {
+  width: 27px;
+  height: 34px;
+}
+
+.footer__dev-name {
+  margin: 0;
 }
 
 @media (min-width: $tablet-width) {
