--- a/source/sass/blocks/catalog/catalog.scss
+++ b/source/sass/blocks/catalog/catalog.scss
@@ -14,8 +14,7 @@
 .catalog__title {
   @include common-title;
   text-align: center;
-  margin: 0;
-  margin-bottom: 41px;
+  margin: 27px 0 41px 0;
   padding-left: 20px;
 }
 
