--- a/source/sass/blocks/common/page.scss
+++ b/source/sass/blocks/common/page.scss
@@ -9,6 +9,7 @@
 .page__body {
   font-family: "Oswald", sans-serif;
   min-height: 100vh;
+  min-width: max-content;
   color: #000000;
   margin: 0;
 }
