--- a/source/sass/blocks/form/form.scss
+++ b/source/sass/blocks/form/form.scss
@@ -1,7 +1,6 @@
 .form {
-  padding-left: 20px;
-  padding-right: 20px;
   border-top: 1px solid $light-special-gray;
+  text-align: left;
 }
 
 .form__title {
