--- a/source/sass/blocks/common/container.scss
+++ b/source/sass/blocks/common/container.scss
@@ -27,9 +27,18 @@
 }
 
 @media (min-width: $tablet-width) {
+  .container {
+    width: 768px;
+  }
+
   .header__container {
-    width: auto;
-    margin: 0 auto;
-    padding: 0 30px;
+    display: flex;
+    justify-content: space-between;
+    padding: 25px 30px;
+    margin-bottom: 35px;
+  }
+
+  .promo__container {
+    padding: 0 30px 0 30px;
   }
 }
