--- a/source/sass/blocks/catalog/catalog.scss
+++ b/source/sass/blocks/catalog/catalog.scss
@@ -15,7 +15,6 @@
   @include common-title;
   text-align: center;
   margin: 27px 0 41px 0;
-  padding-left: 20px;
 }
 
 .catalog__product-description {
@@ -29,6 +28,10 @@
 .catalog__product-button {
   background-color: $basic-grey;
   color: $dark-gray;
+}
+
+.catalog--other {
+  border: none;
 }
 
 .catalog__title--other {
@@ -53,11 +56,7 @@
   .catalog__list {
     display: grid;
     gap: 60px;
-    padding: 0 30px 30px 30px;
     grid-template-columns: repeat(2, 1fr);
-    padding-left: 30px;
-    padding-right: 30px;
-    column-gap: 60px;
     margin-bottom: 40px;
   }
 
@@ -65,9 +64,8 @@
     @include common-title-big;
     text-align: left;
     margin: 0;
+    padding: 0;
     margin-bottom: 84px;
-    padding-left: 30px;
-    padding-right: 30px;
   }
 
   .catalog__item {
@@ -76,17 +74,27 @@
 
   .catalog__title--other {
     @include common-title;
+    font-size: 36px;
+    line-height: 36px;
     margin-bottom: 80px;
   }
 
   .catalog__list--other {
     @include common-title-tablet;
-    grid-template-columns: 1fr;
     margin: 0;
     text-align: left;
-    padding-left: 30px;
-    padding-right: 30px;
     margin-bottom: 84px;
+    grid-template-columns: 1fr;
+    gap: 0;
+  }
+
+  .catalog__item--other {
+    flex-direction: column;
+    padding: 26px 38px;
+  }
+
+  .product__button--other {
+    width: auto;
   }
 }
 
