--- a/source/sass/blocks/common/container.scss
+++ b/source/sass/blocks/common/container.scss
@@ -26,9 +26,15 @@
   margin-bottom: 35px;
 }
 
+.form__container {
+  margin-bottom: 32px;
+}
+
 @media (min-width: $tablet-width) {
   .container {
     width: 768px;
+    padding: 0 30px;
+    position: relative;
   }
 
   .header__container {
@@ -38,7 +44,8 @@
     margin-bottom: 35px;
   }
 
-  .promo__container {
-    padding: 0 30px 0 30px;
+  .form__container {
+    padding: 0 70px 0 70px;
+    margin-bottom: 60px;
   }
 }
