--- a/source/sass/blocks/common/map.scss
+++ b/source/sass/blocks/common/map.scss
@@ -6,11 +6,10 @@
   border: none;
   width: 100%;
   height: 100%;
-
 }
 
 @media (min-width: $tablet-width) {
-  .map__frame {
+  .map {
     height: 400px;
   }
 }
