--- a/source/sass/blocks/form/form.scss
+++ b/source/sass/blocks/form/form.scss
@@ -184,22 +184,28 @@
 
 @media (min-width: $tablet-width) {
   .form {
-    padding-left: 70px;
-    padding-right: 70px;
     border: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .form__module {
+    grid-column: 1 / 3;
   }
 
   .form__title {
     @include common-title-big;
     margin: 27px 0 54px 0;
+    grid-column: 1 / 3;
   }
 
   .form__text {
     @include common-text-big;
     margin: 0;
+    padding: 0;
     margin-bottom: 66px;
     text-transform: uppercase;
-    padding-right: 305px;
+    grid-column: 1 / 3;
   }
 
   .module-info {
@@ -213,6 +219,10 @@
 
   .form__module--contacts {
     margin-bottom: 65px;
+  }
+
+  .form__module--extra {
+    margin-bottom: 52px;
   }
 
   .module-comment {
@@ -271,7 +281,6 @@
   .module-list--extra {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-bottom: 52px;
     gap: 32px 123px;
   }
 
