--- a/source/sass/blocks/catalog/catalog.scss
+++ b/source/sass/blocks/catalog/catalog.scss
@@ -100,16 +100,13 @@
 
 @media (min-width: $desktop-width) {
   .catalog {
-    width: 1220px;
     padding: 0;
-    margin: 0 auto;
   }
-
 
   .catalog__list {
     display: grid;
     gap: 60px;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     padding: 0;
     column-gap: 80px;
     margin-bottom: 76px;
@@ -117,28 +114,22 @@
 
   .catalog__title--other {
     @include common-title;
-    padding-left: 110px;
-    grid-area: title-other;
+    grid-column: 1 / 4;
+    margin-bottom: 80px;
   }
 
   .catalog--other {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
-    grid-template-areas: "title-other title-other" "catalog-list other-action";
-    width: 1220px;
     padding: 0;
-    margin: 0 auto;
     margin-bottom: 87px;
   }
 
   .catalog__list--other {
-    grid-area: catalog-list;
     padding: 0;
     margin: 0;
     display: flex;
     flex-direction: column;
     gap: 0;
+    grid-column: 1 / 3;
   }
 
   .catalog__item--other {
@@ -146,9 +137,5 @@
     justify-content: space-between;
     padding-top: 15px;
     padding-bottom: 15px;
-  }
-
-  .other-action {
-    grid-area: other-action;
   }
 }
