--- a/source/sass/blocks/common/footer.scss
+++ b/source/sass/blocks/common/footer.scss
@@ -15,10 +15,10 @@
   background-color: transparent;
   display: flex;
   justify-content: space-between;
-  padding: 26px 20px;
+  padding: 20px 0;
   min-width: max-content;
-  width: 320px;
   margin: 0 auto;
+  text-align: left;
 }
 
 .footer__address-title {
@@ -97,6 +97,7 @@
   .footer__address-container {
     position: absolute;
     padding: 60px 78px 60px 80px;
+    background-color: #ffffff;
     column-gap: 87px;
     z-index: 2;
     top: 95px;
