--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -34,6 +34,10 @@
   border: none;
 }
 
+.catalog-other__container {
+  margin-bottom: 35px;
+}
+
 .catalog__title--other {
   font-family: "Oswald", sans-serif;
   font-weight: 400;
