--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -3,11 +3,15 @@
   min-width: max-content;
 }
 
-.footer__addres {
+.footer__container {
+  background-color: transparent;
+}
+
+.footer__address {
   background-color: $base-white;
 }
 
-.footer__addres--background {
+.footer__address--background {
   background-color: $basic-grey;
 }
 
@@ -15,7 +19,8 @@
   background-color: transparent;
   display: flex;
   justify-content: space-between;
-  padding: 20px 0;
+  padding: 26px 20px;
+  width: 280px;
   min-width: max-content;
   margin: 0 auto;
   text-align: left;
@@ -90,16 +95,12 @@
 
 @media (min-width: $desktop-width) {
   .footer__address-container {
-    position: absolute;
-    padding: 60px 78px 60px 80px;
-    background-color: #ffffff;
     column-gap: 87px;
-    z-index: 2;
-    top: 95px;
-    left: 110px;
+    background-color: #ffffff;
+    margin: 0;
   }
 
-  .footer__address-container--bg {
+  .footer__address--background {
     background-color: $base-white;
   }
 
@@ -108,7 +109,22 @@
     background-color: $basic-grey;
   }
 
+  .footer__logo {
+    padding: 0;
+  }
+
+  .footer__container {
+    width: 565px;
+    grid-row: 1 / 3;
+    grid-column: 1 / 2;
+    z-index: 2;
+  }
+
   .footer__link-container {
     padding: 40px 20px;
+  }
+
+  .footer__address {
+    display: grid;
   }
 }
