--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -3,6 +3,10 @@
   text-align: left;
 }
 
+.form__container {
+  margin-bottom: 32px;
+}
+
 .form__title {
   @include common-title;
   margin: 27px 0 37px 0;
@@ -187,6 +191,10 @@
     border: none;
     display: grid;
     grid-template-columns: 1fr 1fr;
+  }
+
+  .form__container {
+    margin-bottom: 60px;
   }
 
   .form__module {
