--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,8 +1,12 @@
 .promo {
-  background-image: linear-gradient(to top, #ffffff 240px, rgba(104, 183, 56, 0.85) 200px), url("../../../img/index-background-mobile.png");
+  background-image: linear-gradient(to top, #ffffff 240px, rgba(104, 183, 56, 0.85) 200px), url("../img/index-background-mobile.png");
   background-repeat: no-repeat;
   background-position: top center;
   min-width: max-content;
+}
+
+.promo__container {
+  text-align: center;
 }
 
 .promo__title {
@@ -23,6 +27,11 @@
   padding-bottom: 29px;
 }
 
+.promo__content-image {
+  display: block;
+  margin: auto;
+}
+
 .promo__button {
   margin-bottom: 20px;
 }
@@ -37,7 +46,6 @@
 
 @media (min-width: $tablet-width) {
   .promo {
-    position: relative;
     background: none;
   }
 
@@ -47,7 +55,7 @@
     text-align: left;
     color: #000000;
     padding: 0;
-    margin-bottom: 40px;
+    grid-column: 1 / 3;
   }
 
   .promo__slogan {
@@ -55,20 +63,39 @@
     line-height: 20px;
     text-align: left;
     color: #000000;
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+    padding-bottom: 0;
+  }
+
+  .promo__content-image {
+    grid-column: 1 / 3;
+    grid-row: 2 / 6;
   }
 
   .promo__button {
-    position: absolute;
-    top: 264px;
     width: 244px;
-    left: 32px;
     margin-bottom: 0;
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    padding-top: 17px;
+    padding-bottom: 17px;
+  }
+
+  .promo__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 160px 70px 54px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .promo {
-    margin-bottom: 121px;
+    margin-bottom: 216px;
+  }
+
+  .promo__container {
+    margin-bottom: 80px;
   }
 
   .promo__title {
@@ -86,10 +113,6 @@
   }
 
   .promo__button {
-    width: 244px;
-    padding-top: 17px;
-    padding-bottom: 17px;
-    top: 220px;
-    left: 190px;
+    margin-left: 80px;
   }
 }
