--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,27 +7,27 @@
 @import "./vareables.scss";
 
 //Общие блоки для всех страниц
-@import "./blocks/common/page-header.scss";
-@import "./blocks/common/main-nav.scss";
-@import "./blocks/common/page.scss";
-@import "./blocks/common/main.scss";
-@import "./blocks/common/logo.scss";
-@import "./blocks/common/footer.scss";
-@import "./blocks/common/button.scss";
-@import "./blocks/common/social.scss";
-@import "./blocks/common/dev.scss";
-@import "./blocks/common/btn-burger.scss";
-@import "./blocks/common/map.scss";
-@import "./blocks/index/promo.scss";
-@import "./blocks/index/program.scss";
-@import "./blocks/index/sample.scss";
-@import "./blocks/index/advantages.scss";
-@import "./blocks/catalog/product.scss";
-@import "./blocks/catalog/catalog.scss";
-@import "./blocks/catalog/other-action.scss";
-@import "./blocks/common/field-submit";
-@import "./blocks/index/slider.scss";
-@import "./blocks/common/container";
+@import "./blocks/page-header.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/page.scss";
+@import "./blocks/main.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/button.scss";
+@import "./blocks/social.scss";
+@import "./blocks/dev.scss";
+@import "./blocks/btn-burger.scss";
+@import "./blocks/map.scss";
+@import "./blocks/promo.scss";
+@import "./blocks/program.scss";
+@import "./blocks/sample.scss";
+@import "./blocks/advantages.scss";
+@import "./blocks/product.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/other-action.scss";
+@import "./blocks/field-submit";
+@import "./blocks/slider.scss";
+@import "./blocks/container";
 
 //Блоки формы подбора программы
-@import "./blocks/form/form.scss"
+@import "./blocks/form.scss"
