:heavy_check_mark: Сборка #3

--- a/3/css/style.css
+++ b/3/css/style.css
@@ -336,6 +336,7 @@
     padding: 60px 0;
     justify-content: space-between;
     column-gap: 308px;
+    margin: auto;
   }
 
   .footer__address-title {
