Правки кода, перестановка медиа

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -3,6 +3,14 @@
   min-width: max-content;
 }
 
+
+.footer__logo {
+  display: block;
+  padding-top: 40px;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
 .footer__container {
   background-color: transparent;
 }
