--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,15 +1,30 @@
-.header__container {
+.page-header__logo {
+  right: 120px;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    align-items: center;
+    gap: 13px;
+  }
+}
+
+.page-header__container {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    padding: 25px 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 55px 0;
+  }
   padding-top: 14px;
   padding-bottom: 14px;
   text-align: center;
 }
 
-@media (min-width: $desktop-width) {
-  .header__container {
-    padding: 55px 0;
-  }
-
-  .page-header--index::before {
+.page-header--index::before {
+  @media (min-width: $desktop-width) {
     content: "";
     background-image: linear-gradient(to top, $base-white 0, rgba(105, 183, 56, 0.85) 0), url("../img/index-background-desktop.png");
     height: 694px;
