--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,6 +28,7 @@
 @import "./blocks/field-submit";
 @import "./blocks/slider.scss";
 @import "./blocks/container";
+@import "./blocks/container-other.scss";
 
 //Блоки формы подбора программы
 @import "./blocks/form.scss"
